<resources>
    <string name="app_name">Thesisx</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Pengaturan</string>
    <string name="splashlogo">SplashLogo</string>
    <string name="your_thesis_explore">Your <font color="#fc3159">Thesis</font>. Explore</string>
    <string name="find_your_best_references">Find your best references</string>
    <string name="masuk">Masuk</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun_daftar">Belum punya Akun? <font color="#fc3159">Daftar</font></string>
    <string name="sudah_punya_akun_masuk">Sudah punya Akun? <font color="#fc3159">Masuk</font></string>
    <string name="bidang">Bidang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_book_description">Image Book Description</string>
    <string name="username">Username</string>
    <string name="detail">Detail</string>
    <string name="nama_pengarang">Nama Pengarang</string>
    <string name="tahun_terbit">Tahun Terbit</string>
    <string name="judul">Judul</string>
    <string name="abstrak">Abstrak</string>
    <string name="isi_abstrak">
        Komunikasi merupakan hal yang penting di zaman sekarang ini. Namun di pulau Sembilan, kecamatan Pangkalan Susu, jaringan komunikasi masih sangat minim. Salah satu solusi yang bisa dimanfaatkan adalah merancang sistem komunikasi gelombang mikro yang berfungsi untuk mengirimkan sinyal informasi melalui medium udara bebas dan harus bersifat LOS (Line of Sight). Pada penelitian ini menggunakan software Pathloss 5.0 untuk merancang dan menganalisis sistem komunikasi gelombang mikro yang optimal. Kemudian menggunakan teknik space diversity untuk perancangan, karena jalur propagasinya melewati lautan. Ketika menggunakan teknik space diversity rentang antenna TR-DR dipisahkan menjadi 100 λ, 150 λ, dan 200 λ. Dari penelitian ini diperoleh hasil availability yang optimal yaitu menggunakan teknik space diversity pada rentang antenna TR-DR 100 λ dengan analisis manual sebesar 99,9928982 % dan dengan simulasi Pathloss 5.0 sebesar 99,9914724 %. Nilai tersebut sudah sesuai dengan standar ITU-R G.827 dan F.1703 untuk rancangan sistem komunikasi gelombang mikro short haul yang mana availability harus sebesar 99,9800 – 99,9966%.
    </string>
    <string name="pinjam">Pinjam</string>
    <string name="cari_buku">Cari Buku</string>
    <string name="title_borrow">Peminjaman</string>
    <string name="title_favorite">Favorite</string>
    <string name="not_found_image">Not Found Image</string>
    <string name="text_not_found">Daftar tidak ditemukan :( \nCari dengan nama yang benar yaa..</string>
    <string name="temukan_referensi_terbaik">Temukan referensi terbaikmu :)</string>
    <string name="kesukaan">Koleksi</string>
    <string name="belum_tambah_ke_favorit">Kamu belum menambahkan referensi ke koleksi kamu yaa..</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengaturan_tambahan">Pengaturan Tambahan</string>
    <string name="keluar">Keluar</string>
    <string name="peminjaman">Peminjaman</string>
    <string name="setuju">Setuju</string>
    <string name="batalkan">Batalkan</string>
    <string name="kamu_belum_meminjam_buku_apapun_yaa">Kamu belum meminjam buku apapun yaa..</string>
    <string name="keluar_dari_aplikasi">Keluar dari aplikasi</string>
    <string name="logout_question">Apakah kamu yakin akan keluar dari aplikasi?</string>
    <string name="selesai">Selesai</string>
    <string name="loan_dialog_title">Pinjaman Selesai</string>
    <string name="loan_description">Apakah pinjamanmu sudah selesai?</string>
    <string name="title_loan_form">Form Peminjaman</string>
    <string name="hint_loan_phone_number">No Hp</string>
    <string name="hint_loan_npm">NPM</string>
    <string name="hint_loan_name">Nama</string>
    <string name="hint_date">Tanggal Peminjaman</string>
    <string name="hint_note">Catatan</string>
    <string name="text_masukan_foto_ktm">Masukkan Foto KTM</string>
    <string name="text_subtitle_foto_ktm">Foto akan digunakan untuk keperluan validasi mahasiswa yang meminjam buku</string>
    <string name="detail_pinjaman">Detail Pinjaman</string>
    <string name="reset_password">Reset Password</string>
    <string name="ubah_username">Ubah Username</string>
    <string name="kirim_reset_password">Kirim Reset Password</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="desc_about">Thesis adalah platform untuk menemukan referensi buku penelitian sesuai kategori bidang pada Program Studi Teknik Elektro Universitas Syiah Kuala</string>
    <string name="text_about">Tentang Aplikasi</string>
    <string name="detail_buku">Detail Buku</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="nama_peminjam">Nama</string>
    <string name="npm_peminjam">NPM</string>
    <string name="detail_peminjam">Detail Peminjam</string>
    <string name="no_hp_peminjam">No HP</string>
    <string name="tanggal_peminjaman">Tanggal Peminjaman</string>
    <string name="informasi_buku">Informasi Buku</string>
    <string name="informasi_pemustaka">Informasi Pemustaka</string>
    <string name="kode_loker">Kode Loker</string>
    <string name="no_loker">No Loker</string>
    <string name="informasi_loker">Informasi Loker</string>
    <string name="lihat_disini">Lihat Disini</string>
    <string name="cd_back">back</string>
    <string name="akhiri_pinjaman">Akhiri Pinjaman</string>
    <string name="cd_add">add</string>
    <string name="ambil_di_loker_1_yaa">Ambil di Loker 1 yaa..</string>
    <string name="version">version</string>
</resources>