<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/range_24"
        android:layout_marginTop="@dimen/range_16"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/keluar_dari_aplikasi"
        android:textColor="@color/black"
        android:textSize="@dimen/size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/range_8"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/size_12"
        app:layout_constraintEnd_toEndOf="@+id/btn_accept"
        app:layout_constraintStart_toStartOf="@id/tv_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
        android:text="@string/logout_question" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        style="@style/ButtonStyle14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/range_16"
        android:layout_marginEnd="@dimen/range_24"
        android:layout_marginBottom="@dimen/range_16"
        android:text="@string/setuju"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/ButtonStyleWhite12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/range_16"
        android:layout_marginEnd="@dimen/range_24"
        android:layout_marginBottom="@dimen/range_16"
        android:text="@string/batalkan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_accept"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>