<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.loan_detail.LoanDetailActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/InterSemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/range_16"
        android:gravity="center_horizontal|top"
        android:text="@string/detail_pinjaman"
        android:textSize="@dimen/size_18"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/arrow_back"
        app:layout_constraintTop_toTopOf="@+id/arrow_back" />

    <ImageButton
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/cd_back"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_icon"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/strokeColor"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/informasi_buku"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/judul_buku"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/tv_book_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                tools:text="Perancangan dan Analisis Sistem Komunikasi Gelombang Mikro Point to Point Dengan Teknik Space Diversity Menggunakan Software Pathloss 5.0 di Kecamatan Pangkalan Susu - Pulau Sembilan" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/nama_pengarang"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/tv_book_title" />

            <TextView
                android:id="@+id/tv_author_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_book_title"
                app:layout_constraintStart_toStartOf="@+id/tv_book_title"
                app:layout_constraintTop_toTopOf="@+id/textView13"
                tools:text="Muhammad Manzil Karama" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/tahun_terbit"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_author_name"
                app:layout_constraintStart_toStartOf="@+id/tv_author_name"
                app:layout_constraintTop_toTopOf="@+id/textView17"
                tools:text="2021" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/range_4"
                android:layout_marginTop="16dp"
                android:background="@color/strokeColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/informasi_pemustaka"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/nama_peminjam"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_book_title"
                app:layout_constraintStart_toStartOf="@+id/tv_book_title"
                app:layout_constraintTop_toTopOf="@+id/textView20"
                tools:text="Shaquille Rizki Ramadhan Na" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/npm_peminjam"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_npm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="@+id/textView22"
                tools:text="1804105010026" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/no_hp_peminjam"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/tv_npm" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_npm"
                app:layout_constraintStart_toStartOf="@+id/tv_npm"
                app:layout_constraintTop_toTopOf="@+id/textView24"
                tools:text="085261977836" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/tanggal_peminjaman"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView24"
                app:layout_constraintStart_toStartOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_phone_number"
                app:layout_constraintStart_toStartOf="@+id/tv_phone_number"
                app:layout_constraintTop_toTopOf="@+id/textView26"
                tools:text="22 Jul 2022" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/range_4"
                android:layout_marginTop="16dp"
                android:background="@color/strokeColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/informasi_loker"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/kode_loker"
                android:textSize="@dimen/size_12"
                app:layout_constraintEnd_toEndOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <TextView
                android:id="@+id/tv_loker_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/size_12"
                android:text="@string/lihat_disini"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="@+id/textView29" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

<!--    <View-->
<!--        android:id="@+id/view4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:background="@color/strokeColor"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/layout_constraint_button"-->
<!--        tools:layout_editor_absoluteX="0dp" />-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/layout_constraint_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btn_end_loan"-->
<!--            style="@style/ButtonStyle12"-->
<!--            android:layout_width="@dimen/range_0"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/range_16"-->
<!--            android:layout_marginTop="@dimen/range_16"-->
<!--            android:layout_marginEnd="@dimen/range_16"-->
<!--            android:layout_marginBottom="@dimen/range_16"-->
<!--            android:text="@string/akhiri_pinjaman"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <ProgressBar-->
<!--            android:id="@+id/progress_bar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:indeterminateTint="@color/primaryColor"-->
<!--            android:visibility="gone"-->
<!--            android:layout_marginTop="@dimen/range_24"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"/>-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>